# vla-learn

./: .gitattributes  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
book/: README.md  book.typ
book/chapters/: m0.typ  m1.typ  m2.typ  m3.typ  m4.typ  m5.typ  m6.typ
book/lib/: template.typ
configs/: m4_mse.json  m5_flow.json  smoke.json
docs/: curriculum.md  glossary.md
exercises/: README.md
exercises/m1/: README.md  starter.py
exercises/m2/: README.md
exercises/m3/: README.md
exercises/m4/: README.md
exercises/m5/: README.md
exercises/m6/: README.md  ablation.py  discrete_head.py
lessons/: README.md  m0_overview.md  m1_pytorch.md  m2_imitation.md  m3_data_actions.md  m4_tiny_vla_mse.md  m5_flow_matching.md  m6_lerobot_and_models.md
notebooks/: README.md  playground.ipynb
notebooks/exercises/: m1.ipynb  m2.ipynb  m3.ipynb  m4.ipynb  m5.ipynb  m6.ipynb
notebooks/solutions/: m1.ipynb  m2.ipynb  m3.ipynb  m4.ipynb  m5.ipynb  m6.ipynb
scripts/: _bootstrap.py  build_book.py  demo_rollout.py  eval_policy.py  export_lerobot.py  make_dataset.py  make_exercise_notebooks.py  make_figures.py  train_flow.py  train_mse.py
solutions/: README.md
solutions/m1/: README.md  solution.py
solutions/m2/: README.md
solutions/m3/: README.md
solutions/m4/: README.md
solutions/m5/: README.md
solutions/m6/: README.md
src/vla_learn/: __init__.py  constants.py  functional.py
src/vla_learn/datasets/: __init__.py  normalization.py  synthetic_dataset.py  temporal.py  tokenizer.py
src/vla_learn/envs/: __init__.py  expert.py  render.py  tabletop2d.py
src/vla_learn/evaluation/: __init__.py  (+3 more)
tests/: test_dataset_shapes.py  test_env_expert.py  test_flow_head.py  test_model_forward.py  test_normalization.py  test_overfit_tiny_batch.py  test_temporal_and_mask.py
(+14 files in other folders)
