[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-learn"
version = "0.1.0"
description = "小さな VLA をスクラッチで作って学ぶ日本語教材"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
# 可視化と LeRobot 連携（必須ではない・extra として任意導入）
viz = ["matplotlib>=3.7"]
lerobot = ["lerobot"]
notebook = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.10.9",
]
book = [
    "typst>=0.15.0",
]

[dependency-groups]
# 開発用（テスト）。`uv sync` で既定でインストールされる。
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# --- uv 設定 -----------------------------------------------------------------
# PyTorch は CPU 版だけを使う（この教材は CPU のみで完結）。
# Linux / Windows では PyTorch 公式の CPU 専用 index から取得し、
# macOS では PyPI 既定（こちらも CPU ビルド）を使う。
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
